--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="img/favicon.ico">
 
+    <link href="https://cdn.bootcss.com/animate.css/3.7.2/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@2.0/lib/index.css">
     <link rel="stylesheet" href="css/app.css">
 
@@ -16,7 +17,7 @@
     
     <script src="components/uploader.js"></script>
 
-    <title>物体识别</title>
+    <title>图像物体识别</title>
   </head>
 
   <body>
