--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="manifest" href="manifest.json" />
     <link rel="icon" href="img/favicon.ico">
 
     <link href="https://cdn.bootcss.com/animate.css/3.7.2/animate.min.css" rel="stylesheet">
@@ -15,6 +16,18 @@
     <script src="https://cdn.bootcss.com/axios/0.19.0/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vant@2.0/lib/vant.min.js"></script>
     
+    <link rel="icon" type="image/png" sizes="32x32" href="https://oss.imcloudapp.com/discern_icon.png?x-oss-process=image/resize,w_32">
+    <link rel="icon" type="image/png" sizes="16x16"
+    href="https://oss.imcloudapp.com/discern_icon.png?x-oss-process=image/resize,w_16">
+    <meta name="theme-color" content="#FFFFFF">
+    <meta name="apple-mobile-web-app-capable" content="no">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="my-project">
+    <link rel="apple-touch-icon" href="https://oss.imcloudapp.com/discern_icon.png?x-oss-process=image/resize,w_152">
+
+    <meta name="msapplication-TileImage" content="https://oss.imcloudapp.com/discern_icon.png?x-oss-process=image/resize,w_144">
+    <meta name="msapplication-TileColor" content="#F0F3F6">
+
     <script src="components/uploader.js"></script>
 
     <title>图像物体识别</title>
