--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
 
     <script src="components/uploader.js"></script>
 
-    <title>图像物体识别</title>
+    <title>AI物体识别</title>
   </head>
 
   <body>
