--- a/static/index.html
+++ b/static/index.html
@@ -16,19 +16,16 @@
     <script src="https://cdn.bootcss.com/axios/0.19.0/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vant@2.0/lib/vant.min.js"></script>
     
-    <link rel="icon" type="image/png" sizes="32x32" href="https://oss.imcloudapp.com/discern_icon.png?x-oss-process=image/resize,w_32">
-    <link rel="icon" type="image/png" sizes="16x16"
-    href="https://oss.imcloudapp.com/discern_icon.png?x-oss-process=image/resize,w_16">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/16.png">
     <meta name="theme-color" content="#FFFFFF">
-    <meta name="apple-mobile-web-app-capable" content="no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="my-project">
-    <link rel="apple-touch-icon" href="https://oss.imcloudapp.com/discern_icon.png?x-oss-process=image/resize,w_152">
+    <meta name="apple-mobile-web-app-title" content="AI物体识别">
+    <link rel="apple-touch-icon" href="img/152.png">
 
-    <meta name="msapplication-TileImage" content="https://oss.imcloudapp.com/discern_icon.png?x-oss-process=image/resize,w_144">
+    <meta name="msapplication-TileImage" content="img/144.png">
     <meta name="msapplication-TileColor" content="#F0F3F6">
-
-    <script src="components/uploader.js"></script>
 
     <title>AI物体识别</title>
   </head>
